--- a/ui-new/src/index.css
+++ b/ui-new/src/index.css
@@ -134,3 +134,9 @@ body, #root, #root >div {
   box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
 }
+
+
+.page-header {
+  background-color: #f2f2f0;
+  padding: .9375rem 1.25rem;
+}
